slightly better spacing and fixed top offset i forgot to add for footprints

--- a/styles.css
+++ b/styles.css
@@ -801,8 +801,8 @@ footer {
 /* Hover Footprints */
 .footprint-container {
     position: absolute;
-    top: -100px;
-    left: -50px;
+    top: -204px;
+    left: -82px;
     width: 150px;
     /* height: 120px; */
     pointer-events: none;
